Hasta el vídeo 174

--- a/CursoUdemy/Angular/04-pipesApp/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/CursoUdemy/Angular/04-pipesApp/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -55,7 +55,7 @@
   </div>
 
   <div class="col-12 md:col-6">
-    <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+    <p-fieldset legend="Json Pipe" [toggleable]="true">
       <pre>{{ heroes | json }}</pre>
     </p-fieldset>
   </div>
